src/style/layout/_grid.sass
@import '../base/variables'

.container
    margin: 0 auto
    padding: 0 $block-space
    @media (max-width: $container-column-threshold)
        padding: 0
    max-width: $container-column-threshold
    &:last-child
        margin-bottom: $block-space

.row::before,
.row::after
    display: table
    content: ' '
    clear: both

.one,
.one-third,
.two-thirds,
.one-fourth,
.half
    width: 100%
    padding: 0 $block-space
    @media (max-width: $container-column-threshold)
        padding: 0 calc(#{$block-space} / 2)

.container
    @media (min-width: $container-column-threshold)
        .one
            width: 100%
        .half
            width: calc(100% / 2)
        .one-third
            width: calc(100% / 3)
        .one-fourth
            width: calc(100% / 4)
        .two-thirds
            width: calc(100% / 3 * 2)
        .column
            float: left
        .column-right
            float: right

